# ttk4145

oving2/: .cproject  .project  Makefile  test
oving2/include/: CliServ.h  server.h  util.h
oving2/src/: CliServ.c  client.c  queue.c  server.c  util.c
oving3/: fib.adb  fibonacci.adb  hello_world.adb  main.adb  nsynch.adb  tasks.adb  tasks.ads
oving4/: hello_world  hello_world.go  part1  part1.go  part2.go  part3.go
oving5/: atomic  atomic.c
oving6/: ppair  ppair.c  procpair  procpair.c
oving7/: deadlock.lts  livelock.lts  philosophers.lts  progress_livelock.lts
project/: liblist-2.4.tar.bz2
project/include/: alive.h  elevator.h  manager.h  network.h  order.h  peer.h  recs.h
project/liblist-2.4/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  liblist.pc.in  list.c  list.h
project/liblist-2.4/examples/: Makefile  README  listtest.c  queuetest.c  stacktest.c
project/liblist-2.4/examples/cache/: README  cache.c  cache.h  cachetest.c  lcache.3
project/liblist-2.4/man/: liblist.3  liblist_queue.3  liblist_stack.3  list.h.0  list_remove_curr.3  q_free.3  queue.h.0  stack.h.0  stack_top.3
project/liblist-2.4/paper/: list.fig  paper.tex
project/liblist-2.4/paper/performance/: Makefile  allocperf.c  stackperf.c  travperf.c
project/liblist-2.4/tests/: basic.c  libc_conflict.c  list_remove_element.c  oldapi.c
project/src/: recs.c
recs/: .classpath  .gitignore  src.tgz  src2.tgz
recs/driver/: elevtest
recs/jni/: Makefile  jni_io.c  jni_io.h
recs/jni/driver/: Makefile
recs/jni/driver1/: Makefile  jni_Driver.c  jni_Driver.h
recs/jni/driver2/driver/: Makefile
recs/src/edu/ntnu/ttk4145/recs/: DoOrderMessage.java  Elevator.java  Message.java  Order.java  OrderMessage.java  Peer.java  Recs.java  UpdateStateMessage.java  Util.java
recs/src/edu/ntnu/ttk4145/recs/alive/: AliveListener.java  AliveSender.java
recs/src/edu/ntnu/ttk4145/recs/driver/: Driver.java  DriverCallbacks.java  JniDriver.java  RecsCallbacks.java  RecsDriver.java  SabbathCallbacks.java  SabbathDriver.java  SimulatedDriver.java  TestCallbacks.java  TestDriver.java
recs/src/edu/ntnu/ttk4145/recs/elevator/: Elevator.java  Manager.java  Order.java
recs/src/edu/ntnu/ttk4145/recs/manager/: Manager.java
recs/src/edu/ntnu/ttk4145/recs/message/: Message.java  MessageListener.java  NewOrderMessage.java  OrderDoneMessage.java  UpdateOrdersMessage.java  UpdateStateMessage.java
recs/src/edu/ntnu/ttk4145/recs/network/: Peer.java  Radio.java
